--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -5,7 +5,7 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches:
-      - master
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -43,6 +43,12 @@ jobs:
         with:
           submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+
+      - name: Fetch Submodule
+        run: | 
+           cd themes/hugo-blog-awesome/
+           git checkout main
+           cd ../..
 
       - name: Setup Pages
         id: pages
